# WFC-Gen-Qt

./: CMakeLists.txt  README.md  main.cpp
src/model/: Generator.cpp  Generator.h  Grid.cpp  Grid.h  Rule.cpp  Rule.h
src/model/Rule/: Rule.cpp  Rule.h
src/model/Utils/: Direction.h  vec2D.h
src/view/: InputImgPreview.cpp  InputImgPreview.h  MainWidget.cpp  MainWidget.h  PatternWidget.cpp  PatternWidget.h  RulesWindow.cpp  RulesWindow.h
